tests/errors/pat_resolved_as_fun_err/sub.fs
module rec pat_resolved_as_fun_err.sub

let f () = ()
